# MozilCode

./: .gitattributes  .gitignore  MewCode-简历项目描述.md  MozilCode-项目描述.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
MozilCode-python/: .gitignore  MOZILCODE.md  README.md  mozilcode_client.py  pyproject.toml
MozilCode-python/mozilcode/: __main__.py  agent.py  agent_compaction.py  agent_factory.py  agent_helpers.py  agent_hook_events.py  agent_llm_preparation.py  agent_memory.py  agent_noninteractive_tools.py  agent_notifications.py  agent_output_recovery.py  agent_recovery.py  agent_response_history.py  agent_stream.py  agent_tool_authorization.py  agent_tool_execution.py  agent_tool_hooks.py  agent_tool_results.py  agent_usage.py  app.py  askuser_dialog.py  cache.py  client.py  client_error_mapping.py  config.py  context_window_resolver.py  conversation.py  driver.py  frontmatter.py  model_context.py  openai_responses_request.py  openai_streaming.py  permission_dialog.py  plan_dialog.py  plan_paths.py  prompts.py  provider_auth.py  removed_capabilities.py  serialization.py  session_dialog.py  (+2 more)
MozilCode-python/tests/: test_a2a_bridge.py  test_a2a_protocol.py  test_a2a_tasks.py  test_agent.py  test_agent_compaction.py  test_agent_defaults.py  test_agent_events.py  test_agent_factory.py  test_agent_helpers.py  test_agent_hook_events.py  test_agent_llm_preparation.py  test_agent_memory.py  test_agent_model_selection.py  test_agent_noninteractive_tools.py  test_agent_notifications.py  test_agent_output_recovery.py  test_agent_recovery.py  (+82 more)
(+803 files in other folders)
