[project]
name = "mozilcode"
version = "0.2.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "websockets>=14.0",
]

[project.scripts]
mozilcode = "mozilcode.__main__:main"
mozilcode-daemon = "mozilcode.daemon.server:run_daemon"

[tool.hatch.build.targets.wheel]
packages = ["mozilcode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
